# uricore

./: .gitignore  CHANGELOG.md  README.md  SUMD.md  SUMR.md  TODO.md  app.doql.less  goal.yaml  planfile.yaml  project.sh  pyproject.toml
contracts/proto/uricontrol/v1/: envelope.proto
core/python/uri_control/: __init__.py  cli.py  envelope.py  handlers.py  registry.py  resolver.py  runtime_handlers.py  transport.py  urisys_handlers.py  urisys_handlers_test_support.py
core/python/uri_control/edge/: __init__.py  cli.py  compose.py  flow_artifacts.py  flow_expect.py  flow_refs.py  http.py  manifest.py  risk_policy.py  runtime.py
core/python/uri_control/edge/call/: __init__.py  pipeline.py  resolver_hook.py
core/python/uri_control/edge/flow/: __init__.py  loader.py  runner.py  steps.py
project/: README.md  analysis.toon.yaml  calls.mmd  calls.toon.yaml  calls.yaml  compact_flow.mmd  context.md  duplication.toon.yaml  evolution.toon.yaml  flow.mmd  index.html  logic.pl  map.toon.yaml  mermaid.export  planfile-tickets.yaml  project.toon.yaml  prompt.txt
testql-scenarios/: generated-cli-tests.testql.toon.yaml  generated-from-pytests.testql.toon.yaml
tests/: test_envelope.py  test_flow_expect.py  test_flow_inputs.py  test_flow_refs.py  test_flow_runner.py  test_operation_policy.py  test_register.py  test_resolver.py  test_risk_policy.py  test_runtime_handlers.py  test_transport.py  test_urisys_handlers.py
