[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uricore"
version = "0.1.6"
description = "Thin URI-native control-plane core for software, services and devices."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
  { name = "uricore contributors" },
  {name = "Tom Sapletta",email = "tom@sapletta.com"}
]
dependencies = [
  "PyYAML>=6.0"
]
keywords = ["uri", "control-plane", "cqrs", "event-sourcing", "devices", "automation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6.0",
  "goal>=2.1.0",
  "costs>=0.1.20",
  "pfix>=0.1.60",
]

[project.scripts]
uricore = "uri_control.cli:main"

[tool.setuptools]
package-dir = {"" = "core/python"}

[tool.setuptools.packages.find]
where = ["core/python"]
include = ["uri_control*"]

[tool.pytest.ini_options]
pythonpath = ["core/python", "."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pfix]
# Self-healing Python configuration
model = "openrouter/qwen/qwen3-coder-next"
auto_apply = true
auto_install_deps = true
auto_restart = false
max_retries = 3
create_backups = false
git_auto_commit = false

[tool.pfix.runtime_todo]
enabled = true
todo_file = "TODO.md"
min_severity = "low"
deduplicate = true

[tool.costs]
# AI Cost tracking configuration
badge = true
update_readme = true
readme_path = "README.md"
default_model = "openrouter/qwen/qwen3-coder-next"
analysis_mode = "byok"
full_history = true
max_commits = 500

# Cost thresholds for badge colors (USD)
badge_color_thresholds = { low = 1.0, medium = 5.0, high = 10.0, critical = 50.0 }
