[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uricontrol"
version = "0.1.14"
description = "Thin URI-native control-plane core for software, services and devices."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
  { name = "uricontrol contributors" },
  {name = "Tom Sapletta",email = "tom@sapletta.com"}
]
dependencies = [
  "PyYAML>=6.0",
  "urirouter>=0.1.0",
]
keywords = ["uri", "control-plane", "cqrs", "event-sourcing", "devices", "automation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
# Native MQTT transport delegation (resolver targets with options.broker).
# Without it, mqtt targets must use an HTTP→MQTT bridge (options.bridge_url).
mqtt = [
  "urirouter[mqtt]>=0.1.0",
]
dev = [
  "pytest>=8.0",
  "ruff>=0.6.0",
  "goal>=2.1.0",
  "costs>=0.1.20",
  "pfix>=0.1.60",
]

[project.scripts]
uricontrol = "uri_control.cli:main"

[tool.setuptools]
package-dir = {"" = "core/python"}

[tool.setuptools.packages.find]
where = ["core/python"]
include = ["uri_control*"]

[tool.pytest.ini_options]
# ``../urirouter/src`` lets tests import the extracted ``uri_router`` package
# from the sibling checkout without an editable install (prod uses the wheel).
pythonpath = ["core/python", ".", "../urirouter/src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pfix]
# Self-healing Python configuration
model = "openrouter/qwen/qwen3-coder-next"
auto_apply = true
auto_install_deps = true
auto_restart = false
max_retries = 3
create_backups = false
git_auto_commit = false

[tool.pfix.runtime_todo]
enabled = true
todo_file = "TODO.md"
min_severity = "low"
deduplicate = true

[tool.costs]
# AI Cost tracking configuration
badge = true
update_readme = true
readme_path = "README.md"
default_model = "openrouter/qwen/qwen3-coder-next"
analysis_mode = "byok"
full_history = true
max_commits = 500

# Cost thresholds for badge colors (USD)
badge_color_thresholds = { low = 1.0, medium = 5.0, high = 10.0, critical = 50.0 }
